public/css/main.css
/* ... */
.allBreweries {
  position: absolute;
  top: 0;
  right: -250px;
  width: 250px;
  overflow-y: scroll;
  background-color: rgba(255, 255, 255, 0.8);
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
  padding: 10px 20px;
  overflow: visible;
}
.allBreweries .flyout {
  background-color: rgba(255, 255, 255, 0.8);
  padding: 30px;
  position: absolute;
  top: 0;
  left: -73px;
}
.allBreweries h2 {
  color: #000;
  margin-bottom: 20px;
}
.allBreweries .brews .brew {
  margin-bottom: 30px;
  width: 100%;
  display: inline-block;
}
.allBreweries .brews .brew img {
  max-width: 40px;
  float: left;
  display: inline-block;
}
.allBreweries .brews .brew h3 {
  float: left;
  font-size: 15px;
  display: inline-block;
  width: 150px;
  vertical-align: top;
  margin-top: 0;
  margin-left: 10px;
}

.create-button {
  position: absolute;
  left: 45%;
  bottom: 50px;
  margin-top: 20px;
  background-color: white;
  background-image: none;
  border: 2px solid black;
  color: black;
  font-size: 20px;
  padding: 15px 5px;
  transition: background-color 0.9s ease;
}

.create-button:hover {
  background-color: black;
  color: #fff;
}

@media (max-width: 780px) {
  .create-button {
    left: 42%;
  }
}

@media (max-width: 780px) {
  .create-button {
    left: 30%;
  }
}

.uber-link {
  cursor: pointer;
}

.submit-new-crawl-button {
  margin-bottom: 40px;
}

#share-buttons {
  position: absolute;
  bottom: 50px;
  left: 50px;
  background-color: rgba(255, 255, 255, 0.8);
  padding: 30px;
}

#share-buttons > div {
  display: inline-block;
  margin-left: 10px;
}

#twitter-share > iframe {
  margin-bottom: -5px;
}

